# usb-dsp-mac

./: .gitignore  MACOS_USB_FIX.md  README.md  README_DSP408.md  debug_transport.py  disasm10.py  disasm11.py  disasm12.py  disasm13.py  disasm14.py  disasm15.py  disasm16.py  disasm17.py  disasm18.py  disasm2.py  disasm3.py  disasm4.py  disasm5.py  disasm6.py  disasm7.py  disasm8.py  disasm9.py  disasm_usb.py  discover.py  dsp408.py  dsp408_hid.py  dsp408_interface.py  dsp408_iokit.py  dsp408_tcp.py  dsp408_usb_init.py  dsp408_usb_patched.py  flash_firmware.py  hidapi_test.py  iokit_hid.py  patch_hidapi_macos.sh  probe.py  pyproject.toml  set_report_test.py  sniff.py  talk.py  (+9 more)
.github/workflows/: ci.yml
captures/: README.md  _pi_probe_setreport.sh  _pi_run_captures.sh  analyze_capture.py  defeat_pass_oneandtheother.pcapng  defeat_pass_oneandtheother.txt  linux-01-enum-idle.pcapng  linux-01-enum-idle.txt  linux-02-vendor-probe.pcapng  linux-02-vendor-probe.txt  linux-02b-setreport-probe.pcapng  linux-02b-setreport-probe.txt  probe.py  reset_to_defaults.pcapng  reset_to_defaults.txt  windows-01-fw-update-original-V6.21.pcapng  windows-01-fw-update-original-V6.21.txt  windows-01b-fw-update-original-V6.21-run2.pcapng  windows-01b-fw-update-original-V6.21-run2.txt  windows-02-fw-update-patched-noop.pcapng  windows-02-fw-update-patched-noop.txt  windows-03-fw-update-patched-hidpage.pcapng  windows-03-fw-update-patched-hidpage.txt  windows-04-app-connect-and-settings.pcapng  windows-04-app-connect-and-settings.txt  windows-04b-volumes-mute-presets.pcapng  windows-04b-volumes-mute-presets.txt  windows-04c-stream-nostream-stream.pcapng  windows-04c-stream-nostream-stream.txt
docs/: KNOWN_ISSUES.md
dsp408/: __init__.py  cli.py  config.py  device.py  flasher.py  mqtt.py  protocol.py  transport.py
firmware_patch/: README.md  patch_firmware.py
macos_hid_diag/: README.md  analyze_wmcu.py  corehid_comms.swift  corehid_find.swift  corehid_fix.swift  corehid_min.swift  corehid_pull.swift  corehid_quick.swift  corehid_reportid.swift  corehid_seize_first.swift  corehid_test.swift  corehid_test2.swift  dump_hid_descriptor.c  err_decode.swift  find_hid_in_firmware.py  force_hid_prop.c  hid_mgr2.c  hid_mgr_rep.c  hid_mgr_test.c  hid_rescue.sh  hid_seize.c  hid_svc_client.c  hid_test.c  hid_test.swift  hid_val.c  iohidif_open.c  iokit_clean.swift  iokit_clean2.swift  iokit_seize.swift  search_prop.c  test_bulk.c  test_iokit_usb.c  try_alt_report_types.swift  usb_direct.swift  usb_read_test.c  verify_fix.sh  watch_ioreg.sh
macos_hid_diag/exe_analysis/: find_payload.py  find_usb_descriptor.py  hunt_signature.py  locate_embedded_firmware.py  scan_strings.py
macos_hid_driver/: BUILD.md  DSP408Driver.entitlements  DSP408HIDDriver.cpp  DSP408HIDDriver.iig  Info.plist  dext_activate_host.swift  test_after_driver.swift
notes/: 296-byte-channel-blob-decoded.md  blob-layout-verification.md  captures-needed-from-windows.md  dongle-protocols-and-esp32-path.md
packaging/systemd/: dsp408-mqtt.env.example  dsp408-mqtt.service
tests/: test_aliases.py  test_controls.py  test_frame.py  test_mqtt.py  test_multi_device.py
tests/live/: README.md  __init__.py  conftest.py  test_eq_band_all_positions.py  test_full_channel_state_shift.py  test_persistence_reopen.py  (+4 more)
webui/: app.py
(+29 files in other folders)
