[project]
name = "dsp408"
version = "0.1.0"
description = "Dayton Audio DSP-408 USB control library + Gradio web UI (Linux-first, cross-platform)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dsp408-py contributors" }]
keywords = ["dsp", "dsp-408", "dayton-audio", "usb-hid", "reverse-engineering"]

# Runtime dependencies. hidapi is the USB transport; gradio is only
# required for `webui.app`. Both install cleanly on Linux (Pi) and macOS.
dependencies = [
    "hidapi>=0.14",
    # TOML parser for the aliases config file. stdlib `tomllib` is 3.11+;
    # fall back to the widely-used `tomli` on 3.10.
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
ui = [
    "gradio>=4.44,<6",
]
mqtt = [
    "paho-mqtt>=1.6,<3",
]
dev = [
    "pytest>=7",
    "ruff>=0.5",
]

[project.scripts]
dsp408 = "dsp408.cli:main"

[project.urls]
Homepage = "https://github.com/malaiwah/dsp408-py"
Repository = "https://github.com/malaiwah/dsp408-py"

# ── build-system ──────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsp408"]

# ── ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dsp-408-ui", "downloads"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]  # line length handled by formatter

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
# Loopback tests need physical hardware (Scarlett 2i2 + DSP-408) and the
# `sounddevice` library — exclude from default unit-test runs. Run them
# manually on the hardware host:
#     sg audio -c '.venv/bin/python tests/loopback/test_<name>.py'
testpaths = ["tests"]
norecursedirs = ["loopback"]
